Fix overflow issue.

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -18,6 +18,7 @@ next-route-announcer {
 body {
   background: #111111;
   color: #6c757d;
+  overflow: hidden;
 
   font-family: -apple-system, "system-ui", "Segoe UI", Roboto, "Helvetica Neue",
     Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
